<resources>
    <string name="app_name">Find Training</string>
    <string name="student_name">Student Name</string>
    <string name="university_email">University Email</string>
    <string name="password">Password</string>
    <string name="city">City</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>